tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_count_mismatch_one_to_two.fg
/; EXPECT_ERROR: AssignmentExpressionCountMismatch
var x:int = 10
var y:int = 20
x = 30, 40

